--- a/package.json
+++ b/package.json
@@ -1,17 +1,34 @@
 {
+  "homepage": "https://marshymadness.github.io/IncrementalAge",
   "name": "incrementalage",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@mantine/core": "^4.1.3",
+    "@mantine/dates": "^4.1.3",
+    "@mantine/dropzone": "^4.1.3",
+    "@mantine/form": "^4.1.3",
+    "@mantine/hooks": "^4.1.3",
+    "@mantine/modals": "^4.1.3",
+    "@mantine/notifications": "^4.1.3",
+    "@mantine/prism": "^4.1.3",
+    "@mantine/rte": "^4.1.3",
+    "@mantine/spotlight": "^4.1.3",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.0.1",
     "@testing-library/user-event": "^13.5.0",
+    "dayjs": "^1.11.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^8.2.0",
+    "react-tooltip": "^4.2.21",
+    "sweetalert2": "^11.4.8",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -34,5 +51,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
   }
 }
